<resources>
    <string name="app_name">WonderFood</string>
    <string name="shortcut_today">Today</string>
    <string name="shortcut_numbers">Numbers</string>
    <string name="shortcut_kitchen">Kitchen</string>
    <string name="shortcut_shopping">Shopping list</string>
    <string name="shortcut_recipes">Recipes</string>
    <string name="shortcut_log_water">Log water</string>
    <string name="shortcut_start_shopping">Start shopping</string>
    <string name="shortcut_done_shopping">Done shopping</string>
    <string name="health_connect_rationale_title">WonderFood and Health Connect</string>
...
